Adds search bar to Home.js

--- a/API/client/src/Styles/Home.css
+++ b/API/client/src/Styles/Home.css
@@ -6,3 +6,13 @@
     display: flex;
     justify-content: center;
 }
+
+.stock-search-container {
+    display: flex;
+    justify-content: center;
+
+}
+
+.search-stock {
+    width: 50%;
+}
