Stock quote card diplay on search

--- a/API/client/src/Styles/Home.css
+++ b/API/client/src/Styles/Home.css
@@ -16,3 +16,9 @@
 .search-stock {
     width: 50%;
 }
+
+.company-stock-quote {
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+}
