Sets up front end for stock purchase

--- a/API/client/src/Styles/Home.css
+++ b/API/client/src/Styles/Home.css
@@ -7,10 +7,15 @@
     justify-content: center;
 }
 
+.wallet-info {
+    justify-content: center;
+}
+
 .stock-search-container {
     display: flex;
     justify-content: center;
-
+    max-width: 800px;
+    margin: auto;
 }
 
 .search-stock {
