Makes frontend improvements

--- a/API/client/src/Styles/BuyStockModal.css
+++ b/API/client/src/Styles/BuyStockModal.css
@@ -3,7 +3,7 @@
     right: 0 !important;
 }
 
-#current-price, .quantity, .total-price, .funds {
-    text-align: end !important;
+#current-price, #quantity, #total-price, #funds {
+    text-align: end;
 }
 
